--- a/src/main/webapp/brand.html
+++ b/src/main/webapp/brand.html
@@ -286,53 +286,45 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								default:leftdivlist+=leftdiv ;
 							}
 						}
-						//list标签是按行顺序显示的,所以需要改变一下list中的内容
 						$("#list1").html(divlist1);
-						$("#list2").html(divlist4);
-						$("#list3").html(divlist7);
-						$("#list4").html(divlist2);
+						$("#list2").html(divlist2);
+						$("#list3").html(divlist3);
+						$("#list4").html(divlist4);
 						$("#list5").html(divlist5);
-						$("#list6").html(divlist8);
-						$("#list7").html(divlist3);
-						$("#list8").html(divlist6);
+						$("#list6").html(divlist6);
+						$("#list7").html(divlist7);
+						$("#list8").html(divlist8);
 						$("#list9").html(divlist9);
-
-
-						//如果没有内容则隐藏标签
-						if (divlist1 == ''){
-							$("#list1").hide();
-						}
-						if (divlist4 == ''){
-							$("#list2").hide();
-						}
-						if (divlist7 == ''){
-							$("#list3").hide();
-						}
-						if (divlist2 == ''){
-							$("#list4").hide();
-						}
-						if (divlist5 == ''){
-							$("#list5").hide();
-						}
-						if (divlist8 == ''){
-							$("#list6").hide();
-						}
-						if (divlist3 == ''){
-							$("#list7").hide();
-						}
-						if (divlist6 == ''){
-							$("#list8").hide();
-						}
-						if (divlist9 == ''){
-							$("#list9").hide();
-						}
-
 						$("#leftlist").html(leftdivlist);
+
+						switch (pb.list.length) {
+							case 0:$("#list1").css("display", "none");
+							case 1:$("#list2").css("display", "none");
+							case 2:$("#list3").css("display", "none");
+							case 3:$("#list4").css("display", "none");
+							case 4:$("#list5").css("display", "none");
+							case 5:$("#list6").css("display", "none");
+							case 6:$("#list7").css("display", "none");
+							case 7:$("#list8").css("display", "none");
+							case 8:$("#list9").css("display", "none");
+							default:break;
+
+						}
 						if(pb.list.length<=9){
 							$("#leftliststart").css("display", "none");
 						}
 						if(pb.currentPage<pb.totalPage){
 							$("#leftliststart").css("display", "block");
+							$("#list1").css("display", "block");
+							$("#list2").css("display", "block");
+							$("#list3").css("display", "block");
+							$("#list4").css("display", "block");
+							$("#list5").css("display", "block");
+							$("#list6").css("display", "block");
+							$("#list7").css("display", "block");
+							$("#list8").css("display", "block");
+							$("#list9").css("display", "block");
+
 						}
 
 					},'json'
