--- a/src/main/webapp/mail.html
+++ b/src/main/webapp/mail.html
@@ -191,9 +191,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												<h6>Men's Wear</h6>
 												<li class="li_list"><a href="products.html">Clothing</a></li>
 												<li class="li_list"><a href="products.html">Wallets</a></li>
-												<!--												<li><a href="products.html">Shoes</a></li>-->
-												<!--												<li><a href="products.html">Watches</a></li>-->
-												<!--												<li><a href="products.html">Accessories</a></li>-->
+												<!--												<li><a href="products.html.html">Shoes</a></li>-->
+												<!--												<li><a href="products.html.html">Watches</a></li>-->
+												<!--												<li><a href="products.html.html">Accessories</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
@@ -201,21 +201,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 												<h6>Women's Wear</h6>
 												<li class="li_list"><a href="products.html">Clothing</a></li>
 												<li class="li_list"><a href="products.html">Wallets,Bags</a></li>
-												<!--												<li><a href="products.html">Footwear</a></li>-->
-												<!--												<li><a href="products.html">Watches</a></li>-->
-												<!--												<li><a href="products.html">Accessories</a></li>-->
-												<!--												<li><a href="products.html">Jewellery</a></li>-->
-												<!--												<li><a href="products.html">Beauty & Grooming</a></li>-->
+												<!--												<li><a href="products.html.html">Footwear</a></li>-->
+												<!--												<li><a href="products.html.html">Watches</a></li>-->
+												<!--												<li><a href="products.html.html">Accessories</a></li>-->
+												<!--												<li><a href="products.html.html">Jewellery</a></li>-->
+												<!--												<li><a href="products.html.html">Beauty & Grooming</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown" id="labellist3">
 												<h6>Kid's Wear</h6>
-												<!--												<li><a href="products.html">Kids Home Fashion</a></li>-->
-												<!--												<li><a href="products.html">Boy's Clothing</a></li>-->
+												<!--												<li><a href="products.html.html">Kids Home Fashion</a></li>-->
+												<!--												<li><a href="products.html.html">Boy's Clothing</a></li>-->
 												<li class="li_list"><a href="products.html">Girl's Clothing</a></li>
 												<li class="li_list"><a href="products.html">Shoes</a></li>
-												<!--												<li><a href="products.html">Brand Stores</a></li>-->
+												<!--												<li><a href="products.html.html">Brand Stores</a></li>-->
 											</ul>
 										</div>
 										<div class="clearfix"></div>
