--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -282,9 +282,9 @@ function clearCart() {
 												<h6>Men's Wear</h6>
 												<li class="li_list"><a href="products.html">Clothing</a></li>
 												<li class="li_list"><a href="products.html">Wallets</a></li>
-												<!--												<li><a href="products.html">Shoes</a></li>-->
-												<!--												<li><a href="products.html">Watches</a></li>-->
-												<!--												<li><a href="products.html">Accessories</a></li>-->
+												<!--												<li><a href="products.html.html">Shoes</a></li>-->
+												<!--												<li><a href="products.html.html">Watches</a></li>-->
+												<!--												<li><a href="products.html.html">Accessories</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
@@ -292,21 +292,21 @@ function clearCart() {
 												<h6>Women's Wear</h6>
 												<li class="li_list"><a href="products.html">Clothing</a></li>
 												<li class="li_list"><a href="products.html">Wallets,Bags</a></li>
-												<!--												<li><a href="products.html">Footwear</a></li>-->
-												<!--												<li><a href="products.html">Watches</a></li>-->
-												<!--												<li><a href="products.html">Accessories</a></li>-->
-												<!--												<li><a href="products.html">Jewellery</a></li>-->
-												<!--												<li><a href="products.html">Beauty & Grooming</a></li>-->
+												<!--												<li><a href="products.html.html">Footwear</a></li>-->
+												<!--												<li><a href="products.html.html">Watches</a></li>-->
+												<!--												<li><a href="products.html.html">Accessories</a></li>-->
+												<!--												<li><a href="products.html.html">Jewellery</a></li>-->
+												<!--												<li><a href="products.html.html">Beauty & Grooming</a></li>-->
 											</ul>
 										</div>
 										<div class="col-sm-4">
 											<ul class="multi-column-dropdown" id="labellist3">
 												<h6>Kid's Wear</h6>
-												<!--												<li><a href="products.html">Kids Home Fashion</a></li>-->
-												<!--												<li><a href="products.html">Boy's Clothing</a></li>-->
+												<!--												<li><a href="products.html.html">Kids Home Fashion</a></li>-->
+												<!--												<li><a href="products.html.html">Boy's Clothing</a></li>-->
 												<li class="li_list"><a href="products.html">Girl's Clothing</a></li>
 												<li class="li_list"><a href="products.html">Shoes</a></li>
-												<!--												<li><a href="products.html">Brand Stores</a></li>-->
+												<!--												<li><a href="products.html.html">Brand Stores</a></li>-->
 											</ul>
 										</div>
 										<div class="clearfix"></div>
@@ -647,7 +647,7 @@ function clearCart() {
 		</div>
 	</div>
 <!-- //single -->
-<!-- single-related-products -->
+<!-- single-related-products.html -->
 	<div class="single-related-products">
 		<div class="container">
 			<h3 class="animated wow slideInUp" data-wow-delay=".5s">Related Products</h3>
@@ -801,7 +801,7 @@ function clearCart() {
 			</div>
 		</div>
 	</div>
-<!-- //single-related-products -->
+<!-- //single-related-products.html -->
 <!-- footer -->
 	<div class="footer">
 		<div class="container">
