--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				var lis2='<h6>Women\'s Wear</h6>';
 				var lis3='<h6>Kid\'s Wear</h6>';
 				for(var i=0;i<data.length;i++){
-					var li = '<li><a href='+ data[i].lid + '"../../../../../Users/13157/products.html?lid=">' + data[i].lname + '</a></li>';
+					var li = '<li><a href='+ data[i].lid + '"/shop/products.html?lid=">' + data[i].lname + '</a></li>';
 					if(data[i].lname.startsWith("women")) {lis2 += li;}
 					else if(data[i].lname.startsWith("men")) {lis1 += li;}
 					else { lis3 += li;}
