--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -287,25 +287,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						}
 					}
 			$("#list1").html(divlist1);
-			$("#list2").html(divlist2);
-			$("#list3").html(divlist3);
-			$("#list4").html(divlist4);
+			$("#list2").html(divlist4);
+			$("#list3").html(divlist7);
+			$("#list4").html(divlist2);
 			$("#list5").html(divlist5);
-			$("#list6").html(divlist6);
-			$("#list7").html(divlist7);
-			$("#list8").html(divlist8);
+			$("#list6").html(divlist8);
+			$("#list7").html(divlist3);
+			$("#list8").html(divlist6);
 			$("#list9").html(divlist9);
 			$("#leftlist").html(leftdivlist);
 
 			switch (pb.list.length) {
 				case 0:$("#list1").css("display", "none");
-				case 1:$("#list2").css("display", "none");
-				case 2:$("#list3").css("display", "none");
-				case 3:$("#list4").css("display", "none");
+				case 1:$("#list4").css("display", "none");
+				case 2:$("#list7").css("display", "none");
+				case 3:$("#list2").css("display", "none");
 				case 4:$("#list5").css("display", "none");
-				case 5:$("#list6").css("display", "none");
-				case 6:$("#list7").css("display", "none");
-				case 7:$("#list8").css("display", "none");
+				case 5:$("#list8").css("display", "none");
+				case 6:$("#list3").css("display", "none");
+				case 7:$("#list6").css("display", "none");
 				case 8:$("#list9").css("display", "none");
 				default:break;
 
@@ -327,8 +327,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 			}
 
-		},'json'
-		)};
+		}, 'json')
+
+		};
 	</script>
 
 <!-- //animation-effect -->
