--- a/src/main/webapp/products.html
+++ b/src/main/webapp/products.html
@@ -28,6 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
  new WOW().init();
 
 </script>
+	<script src="js/getParameter.js"></script>
 	<script>
 		$(function () {
 			$.post(
@@ -77,7 +78,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				$("#brandlist2").html(lis2);
 				$("#brandlist3").html(lis3);
 			},'json');
+
 			findCount();
+
+			var lid= getParameter("lid");
+			var currentPage = getParameter("currentPage");
+			// 2.发送异步请求分页查询
+			load(lid, currentPage);
 		});
 
 		//刷新 物品数 总价
@@ -128,14 +135,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					"json"
 			)
 		}
-	</script>
-	<script>
-		$(function () {
-			var lid=location.search.split("=")[1];
-			// 2.发送异步请求分页查询
-			load(lid);
 
-		});
 		function load(lid, currentPage) {
 			$.get('/shop/Goods/queryPage',
 					{lid: lid, currentPage: currentPage},
@@ -165,27 +165,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						}
 
 						var lis = "";
-						var firstPage = '<li><a href="javascript:load('+lid+',1)">首页</a></li>';
+						var firstPage = "<li><a href=\"/shop/products.html?lid=" + lid + "&currentPage=" +1+ "\">首页</a></li>";
 						var beforeNum = pb.currentPage - 1;
 						if (beforeNum < 1) {
 							beforeNum = 1;
 						}
-						var beforePage = '<li class="threeword"><a href="javascript:load('+lid+', '+beforeNum+')">上一页</a></li>';
+						var beforePage = "<li><a href=\"/shop/products.html?lid=" + lid + "&currentPage=" +(pb.currentPage - 1)+ "\">上一页</a></li>";
+						if (pb.currentPage <= 1){
+							beforePage = "<li><a>上一页</a></li>";
+						}
 						lis += firstPage;
 						lis += beforePage;
+						var href = "";
 						for (var i = start; i <= end; i++) {
+							href = "/shop/products.html?lid=" + lid + "&currentPage=" + i;
 							var li;
 							if (i == pb.currentPage) {
-								li = '<li  class="active" onclick="load('+lid+','+i+')"><a href="javascript:;">'+i+'</a></li>';
+								li = "<li  class=\"active\" onclick=\"open("+ href +")\"><a href=\""+ href +"\">"+ i +"</a></li>";
 							} else {
-								li = '<li   onclick="load('+lid+','+i+')"><a href="javascript:;">'+i+'</a></li>';
+								li = "<li  onclick=\"open("+ href +")\"><a href=\""+ href +"\">" + i +"</a></li>";
 							}
 							lis += li;
 						}
-						var nextNum=pb.currentPage+1;
-						if(nextNum>pb.totalPage){nextNum=pb.totalPage;}
-						var nextPage = '<li class="threeword"><a href="javascript:load('+lid+','+nextNum+')">下一页</a></li>';
-						var lastPage = '<li class="threeword"><a href="javascript:load('+lid+','+pb.totalPage+')">末页</a></li>';
+						var nextPage = "<li><a href=\"/shop/products.html?lid=" + lid + "&currentPage=" +(pb.currentPage + 1)+ "\">下一页</a></li>";
+						if (pb.currentPage >= pb.totalPage){
+							nextPage = "<li><a>下一页</a></li>";
+						}
+						var lastPage = "<li><a href=\"/shop/products.html?lid=" + lid + "&currentPage=" +(pb.totalPage)+ "\">末页</a></li>";
 						lis += nextPage;
 						lis += lastPage;
 						$("#page").html(lis);
@@ -271,66 +277,67 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 
-						switch (i) {
-							case 0:divlist1+=div ;break;
-							case 1:divlist2+=div ;break;
-							case 2:divlist3+=div ;break;
-							case 3:divlist4+=div ;break;
-							case 4:divlist5+=div ;break;
-							case 5:divlist6+=div ;break;
-							case 6:divlist7+=div ;break;
-							case 7:divlist8+=div ;break;
-							case 8:divlist9+=div ;break;
-							case 9:leftdivlist+=leftdiv ;break;
-							case 10: leftdivlist+=leftdiv;break;
-							default:leftdivlist+=leftdiv ;
+							switch (i) {
+								case 0:divlist1+=div ;break;
+								case 1:divlist2+=div ;break;
+								case 2:divlist3+=div ;break;
+								case 3:divlist4+=div ;break;
+								case 4:divlist5+=div ;break;
+								case 5:divlist6+=div ;break;
+								case 6:divlist7+=div ;break;
+								case 7:divlist8+=div ;break;
+								case 8:divlist9+=div ;break;
+								case 9:leftdivlist+=leftdiv ;break;
+								case 10: leftdivlist+=leftdiv;break;
+								default:leftdivlist+=leftdiv ;
+							}
 						}
-					}
-			$("#list1").html(divlist1);
-			$("#list2").html(divlist4);
-			$("#list3").html(divlist7);
-			$("#list4").html(divlist2);
-			$("#list5").html(divlist5);
-			$("#list6").html(divlist8);
-			$("#list7").html(divlist3);
-			$("#list8").html(divlist6);
-			$("#list9").html(divlist9);
-			$("#leftlist").html(leftdivlist);
+						//将按列加载改为按行加载(改变每个商品标签的加载顺序)
+						$("#list1").html(divlist1);
+						$("#list2").html(divlist4);
+						$("#list3").html(divlist7);
+						$("#list4").html(divlist2);
+						$("#list5").html(divlist5);
+						$("#list6").html(divlist8);
+						$("#list7").html(divlist3);
+						$("#list8").html(divlist6);
+						$("#list9").html(divlist9);
+						$("#leftlist").html(leftdivlist);
 
-			switch (pb.list.length) {
-				case 0:$("#list1").css("display", "none");
-				case 1:$("#list4").css("display", "none");
-				case 2:$("#list7").css("display", "none");
-				case 3:$("#list2").css("display", "none");
-				case 4:$("#list5").css("display", "none");
-				case 5:$("#list8").css("display", "none");
-				case 6:$("#list3").css("display", "none");
-				case 7:$("#list6").css("display", "none");
-				case 8:$("#list9").css("display", "none");
-				default:break;
+						switch (pb.list.length) {
+							case 0:$("#list1").css("display", "none");
+							case 1:$("#list4").css("display", "none");
+							case 2:$("#list7").css("display", "none");
+							case 3:$("#list2").css("display", "none");
+							case 4:$("#list5").css("display", "none");
+							case 5:$("#list8").css("display", "none");
+							case 6:$("#list3").css("display", "none");
+							case 7:$("#list6").css("display", "none");
+							case 8:$("#list9").css("display", "none");
+							default:break;
 
-			}
-			if(pb.list.length<=9){
-				$("#leftliststart").css("display", "none");
-			}
-			if(pb.currentPage<pb.totalPage){
-				$("#leftliststart").css("display", "block");
-				$("#list1").css("display", "block");
-				$("#list2").css("display", "block");
-				$("#list3").css("display", "block");
-				$("#list4").css("display", "block");
-				$("#list5").css("display", "block");
-				$("#list6").css("display", "block");
-				$("#list7").css("display", "block");
-				$("#list8").css("display", "block");
-				$("#list9").css("display", "block");
+						}
+						if(pb.list.length<=9){
+							$("#leftliststart").css("display", "none");
+						}
+						if(pb.currentPage<pb.totalPage){
+							$("#leftliststart").css("display", "block");
+							$("#list1").css("display", "block");
+							$("#list2").css("display", "block");
+							$("#list3").css("display", "block");
+							$("#list4").css("display", "block");
+							$("#list5").css("display", "block");
+							$("#list6").css("display", "block");
+							$("#list7").css("display", "block");
+							$("#list8").css("display", "block");
+							$("#list9").css("display", "block");
 
-			}
-
-		}, 'json')
+						}
+					}, 'json')
 
 		};
 	</script>
+
 
 <!-- //animation-effect -->
 </head>
