--- a/src/main/webapp/brand.html
+++ b/src/main/webapp/brand.html
@@ -495,7 +495,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="logo-nav-right">
 				<div class="search-box">
 					<div id="sb-search" class="sb-search">
-						<form>
+						<form action="/shop/products-search.html">
 							<input class="sb-search-input" placeholder="Enter your search term..." type="search" id="search">
 							<input class="sb-search-submit" type="submit" value="">
 							<span class="sb-icon-search"> </span>
