--- a/src/main/webapp/single.html
+++ b/src/main/webapp/single.html
@@ -359,7 +359,7 @@ function clearCart() {
 			<div class="logo-nav-right">
 				<div class="search-box">
 					<div id="sb-search" class="sb-search">
-						<form>
+						<form action="/shop/products-search.html">
 							<input class="sb-search-input" placeholder="Enter your search term..." type="search" id="search">
 							<input class="sb-search-submit" type="submit" value="">
 							<span class="sb-icon-search"> </span>
